# review-proto

./: .gitignore  pyproject.toml
pyreview/: main.py
pyreview/proto/: review.proto
